--- a/src/PSI.TI.GestaoEscolar.MVC/Views/Responsaveis/_Cadastro.cshtml
+++ b/src/PSI.TI.GestaoEscolar.MVC/Views/Responsaveis/_Cadastro.cshtml
@@ -11,6 +11,8 @@
     </button>
 </div>
 
+<vc:Summary></vc:Summary>
+
 <form asp-action="Cadastrar">
     <div class="modal-body">
         <input type="hidden" asp-for="Id" />
