--- a/src/PSI.TI.GestaoEscolar.MVC/Views/Responsaveis/_ListaDependentes.cshtml
+++ b/src/PSI.TI.GestaoEscolar.MVC/Views/Responsaveis/_ListaDependentes.cshtml
@@ -1,52 +1,49 @@
-﻿@model PSI.TI.GestaoEscolar.Application.ViewModels.ResponsavelViewModel
+﻿@using PSI.TI.GestaoEscolar.MVC.Extensions
+@model IEnumerable<PSI.TI.GestaoEscolar.Application.ViewModels.AlunoViewModel>
 
 @{
     Layout = null;
+    ViewData["Title"] = "Dependentes";
 }
 
-<div style="padding-top: 20px">
-    <div>
-        <hr />
-        <h4>Dependentes</h4>
-    </div>
-    
-    <vc:Summary></vc:Summary>
+<h2 style="padding-top: 2%">@ViewData["Title"]</h2>
+<hr />
 
-    <table class="table table-hover">
-        <thead class="thead-dark">
-            <tr>
-                <th>
-                    Nome
-                </th>
-                <th>
-                    CPF
-                </th>
-                <th>
-                    Data de Nascimento
-                </th>
-                <th>
-                    Situação
-                </th>
-            </tr>
-        </thead>
+<vc:Summary></vc:Summary>
 
-        @foreach (var item in Model.Dependentes)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Nome)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Cpf)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DataNascimento)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Situacao)
-                </td>
-            </tr>
-        }
-    </table>
+<table class="table table-hover">
+    <thead class="thead-dark">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Nome)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Cpf)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.DataNascimento)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Situacao)
+            </th>
+        </tr>
+    </thead>
 
-</div>
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Nome)
+            </td>
+            <td>
+                @this.FormatarCpf(item.Cpf)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.DataNascimento)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Situacao)
+            </td>
+        </tr>
+    }
+</table>
