--- a/src/PSI.TI.GestaoEscolar.MVC/Views/Responsaveis/_ListaResponsaveis.cshtml
+++ b/src/PSI.TI.GestaoEscolar.MVC/Views/Responsaveis/_ListaResponsaveis.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<PSI.TI.GestaoEscolar.Application.ViewModels.ResponsavelViewModel>
+﻿@using PSI.TI.GestaoEscolar.MVC.Extensions
+@model IEnumerable<PSI.TI.GestaoEscolar.Application.ViewModels.ResponsavelViewModel>
 
 @{
     Layout = null;
@@ -35,7 +36,7 @@
                     @Html.DisplayFor(modelItem => item.GrauParentesco)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Cpf)
+                    @this.FormatarCpf(item.Cpf)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Ocupacao)
