--- a/src/PSI.TI.GestaoEscolar.MVC/Views/Shared/Components/Summary/Default.cshtml
+++ b/src/PSI.TI.GestaoEscolar.MVC/Views/Shared/Components/Summary/Default.cshtml
@@ -2,10 +2,12 @@
 {
     <div style="padding-top: 15px;"></div>
 
-    <div class="alert alert-danger">
-        <button type="button" class="close" data-dismiss="alert">×</button>
-        <h3 id="msgRetorno" style="padding-top: 20px">Opa! Algo deu errado :(</h3>
-        <div style="padding-top: 20px" asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <div class="container">
+        <div class="alert alert-danger">
+            <button type="button" class="close" data-dismiss="alert">×</button>
+            <h3 id="msgRetorno" style="padding-top: 20px">Opa! Algo deu errado :(</h3>
+            <div style="padding-top: 20px" asp-validation-summary="ModelOnly" class="text-danger"></div>
+        </div>
     </div>
 }
 
