--- a/src/PSI.TI.GestaoEscolar.MVC/Views/Shared/_Layout.cshtml
+++ b/src/PSI.TI.GestaoEscolar.MVC/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
               integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" />
     </environment>
     <link rel="stylesheet" href="~/css/site.css" />
-    @*<link href="~/lib/font-awesome/css/all.min.css" rel="stylesheet" />*@
+    <link href="~/lib/font-awesome/css/all.min.css" rel="stylesheet" />
 </head>
 <body>
     <header>
@@ -32,9 +32,6 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Responsaveis" asp-action="Index">Responsáveis</a>
                         </li>
