Adicionar edição de responsável; Adicionar validação para responsável e aluno já cadastrado com o CPF informado.

--- a/src/PSI.TI.GestaoEscolar.MVC/Views/Responsaveis/Detalhes.cshtml
+++ b/src/PSI.TI.GestaoEscolar.MVC/Views/Responsaveis/Detalhes.cshtml
@@ -23,6 +23,18 @@
         <dd class="col-sm-10">
             @this.FormatarCpf(Model.Cpf)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Ocupacao)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Ocupacao)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Renda)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Renda)
+        </dd>
     </dl>
 </div>
 <div>
