--- a/src/PSI.TI.GestaoEscolar.MVC/Views/Responsaveis/_ListaResponsaveis.cshtml
+++ b/src/PSI.TI.GestaoEscolar.MVC/Views/Responsaveis/_ListaResponsaveis.cshtml
@@ -43,6 +43,7 @@
                 </td>
                 <td class="text-right">
                     <a class="btn btn-info" asp-action="Detalhes" asp-route-id="@item.Id"><spam class="fa fa-search"></spam></a>
+                    <a class="btn btn-warning" asp-action="Editar" asp-route-id="@item.Id" data-modal=""><spam class="fa fa-pencil-alt"></spam></a>
                 </td>
             </tr>
         }
