--- a/src/PSI.TI.GestaoEscolar.MVC/Views/Dependentes/_CadastroDependente.cshtml
+++ b/src/PSI.TI.GestaoEscolar.MVC/Views/Dependentes/_CadastroDependente.cshtml
@@ -13,7 +13,7 @@
 
 <vc:Summary></vc:Summary>
 
-<form asp-action="AdicionarDependente">
+<form asp-action="Cadastrar">
     <div class="modal-body">
         <input type="hidden" asp-for="ResponsavelId" />
         <partial name="_Dependente" />
