--- a/src/PSI.TI.GestaoEscolar.MVC/Views/Shared/_Layout.cshtml
+++ b/src/PSI.TI.GestaoEscolar.MVC/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - @ViewData["NomeApp"]</title>
+    <title>@ViewData["NomeApp"] | @ViewData["Title"]</title>
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     </environment>
