--- a/src/PSI.TI.GestaoEscolar.MVC/Views/Shared/_Layout.cshtml
+++ b/src/PSI.TI.GestaoEscolar.MVC/Views/Shared/_Layout.cshtml
@@ -35,6 +35,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Responsaveis" asp-action="Index">Responsáveis</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Professores" asp-action="Index">Professores</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Disciplinas" asp-action="Index">Disciplinas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Turmas" asp-action="Index">Turmas</a>
+                        </li>
                     </ul>
                 </div>
             </div>
